[package]
name = "flp-saml2"
version = "0.1.0"
authors = ["Hakukano <flp.hakukano@gmail.com>"]
edition = "2018"
description = "SAML2 for Rust"
repository = "https://github.com/Hakukano/FLP-SAML2"
documentation = "https://docs.rs/flp-saml2"
homepage = "https://flp-saml2.rs/"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
flate2 = "1.0"
lazy_static = "1.4"
openssl = "0.10"
quick-xml = { version = "0.22", features = ["serialize"] }
regex = "1.4"
serde = { version = "1.0", features = [ "derive" ] }
url = "2.2"
